--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,6 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/GoogleCPP1.VC.VC.opendb
+/GoogleCPP1.VC.db
+/GoogleCPP1/TimesTables5-14.txt
