Add some projects

--- a/GoogleCPP1/GoogleCPP1.vcxproj
+++ b/GoogleCPP1/GoogleCPP1.vcxproj
@@ -22,7 +22,8 @@
     <ProjectGuid>{D473ECDD-A423-43F4-BB9E-AC77797CE4BF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>GoogleCPP1</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.10586.0</WindowsTargetPlatformVersion>
+    <ProjectName>TimesTable</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -153,7 +154,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GoogleCPP1.cpp" />
+    <ClCompile Include="TimesTable.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
