--- a/PS_BoostCourse/Signals2/Signals2.vcxproj.filters
+++ b/PS_BoostCourse/Signals2/Signals2.vcxproj.filters
@@ -24,12 +24,15 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FundamentalsAndCustom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TimesTable.cpp">
+    <ClCompile Include="Signals2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
