--- a/PS_BoostCourse/Assorted/Assorted.vcxproj.filters
+++ b/PS_BoostCourse/Assorted/Assorted.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TimesTable.cpp">
+    <ClCompile Include="Assorted.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
