--- a/PS_BoostCourse/FileSystem/FileSystem.vcxproj
+++ b/PS_BoostCourse/FileSystem/FileSystem.vcxproj
@@ -43,12 +43,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>c:\boost_1_60_0;$(IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
-    <LibraryPath>c:\boost_1_60_0\stage\lib;C:\Users\Pietro\Documents\GitHub\GoogleCPP1\x64\Debug;$(LibraryPath);</LibraryPath>
+    <LibraryPath>C:\boost_1_60_0\stage\lib;C:\Users\Pietro\Documents\GitHub\GoogleCPP1\x64\Debug;$(LibraryPath);</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>c:\boost_1_60_0;$(IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
-    <LibraryPath>c:\boost_1_60_0\stage\lib;C:\Users\Pietro\Documents\GitHub\GoogleCPP1\x64\Debug; $(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\boost_1_60_0\stage\lib;C:\Users\Pietro\Documents\GitHub\GoogleCPP1\x64\Debug; $(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
