--- a/PS_BoostCourse/Assorted/Assorted.vcxproj
+++ b/PS_BoostCourse/Assorted/Assorted.vcxproj
@@ -42,13 +42,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>c:\boost_1_60_0;$(IncludePath);$(IncludePath);$(IncludePath)</IncludePath>
-    <LibraryPath>c:\boost_1_60_0\stage\lib;$(LibraryPath);$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\boost_1_60_0;$(IncludePath);$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>C:\boost_1_60_0\stage\lib;$(LibraryPath);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>c:\boost_1_60_0; $(VC_IncludePath);$(WindowsSDK_IncludePath);;$(IncludePath);$(IncludePath)</IncludePath>
-    <LibraryPath>c:\boost_1_60_0\stage\lib; $(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\boost_1_60_0;$(VC_IncludePath);$(WindowsSDK_IncludePath);$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>C:\boost_1_60_0\stage\lib;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
